--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/open-sans": "^4.5.0",
     "@headlessui/react": "^1.4.1",
+    "@types/react": "^18.0.17",
     "@hookform/resolvers": "^2.8.0",
     "@reach/portal": "^0.16.0",
     "@react-google-maps/api": "^2.2.0",
